--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.0-rc.19",
     "core-js": "^2.6.5",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
