--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^2.6.5",
     "moment": "^2.24.0",
     "vue": "^2.6.10",
+    "vue-infinite-loading": "^2.4.4",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
